# MediOps-BE

./: .env.example  .gitignore  FE_AUTH_INTEGRATION.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: auth.py  patients.py
app/core/: __init__.py  auth.py  security.py
app/schemas/: medications.py  patients.py
app/services/: bill_parser_service.py  discharge_parser_service.py  justification_service.py  patient_service.py  report_parser_service.py
app/utils/: bedrock_client.py  openai_client.py  pdf_service.py
